--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
 recursive-include agentocr/resources/fonts *.ttf
 recursive-include agentocr/resources/char_dicts *.txt
+recursive-include agentocr/resources/configs *.json
