--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,7 @@ jobs:
         wget https://ai-studio-static-online.cdn.bcebos.com/c4c758456cc74d9e997a72a25c47a3a57707b0664ed546819e4d5981ba765b13 -O images/ch.jpg
     - name: Test
       run: |
+        touch test.py
+        echo 'from agentocr import OCRSystem\nimport cv2\nocr = OCRSystem()\nocr.ocr(cv2.imread(images/ch.jpg))' >> test.py
+        python test.py
         agentocr system --image_dir images
