--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install onnxruntime
+        pip install onnxruntime wheel
         python setup.py install
     - name: Download
       run: |
