--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,4 +42,8 @@ jobs:
     - name: Package
       run: |
         python setup.py sdist bdist_wheel
-
+    - name: Publish
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
+      
