--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         echo "print(out)" >> test.py
         echo >> test.py
         python test.py
-        agentocr system images -c ch
+        agentocr system --config ch --image_dir image
     - name: Package
       run: |
         python setup.py sdist bdist_wheel
