rm clp -> add submodule AgentCLPR

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
-[submodule "labeling"]
-	path = labeling
+[submodule "AgentOCRLabeling"]
+	path = AgentOCRLabeling
 	url = https://github.com/AgentMaker/AgentOCRLabeling/
+
+[submodule "AgentCLPR"]
+	path = AgentCLPR
+	url = https://github.com/AgentMaker/AgentCLPR/
