--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Test
 on: [push]
 
 jobs:
-  build:
+  test-on-linux:
 
     runs-on: ubuntu-latest
 
@@ -17,6 +17,41 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install onnxruntime
+        python setup.py install
+    - name: Download
+      run: |
+        mkdir images
+        wget https://ai-studio-static-online.cdn.bcebos.com/c4c758456cc74d9e997a72a25c47a3a57707b0664ed546819e4d5981ba765b13 -O images/ch.jpg
+    - name: Test
+      run: |
+        touch test.py
+        echo "from agentocr import OCRSystem" >> test.py
+        echo >> test.py
+        echo "import cv2" >> test.py
+        echo >> test.py
+        echo "ocr = OCRSystem()" >> test.py
+        echo >> test.py
+        echo "out=ocr.ocr(cv2.imread('images/ch.jpg'))" >> test.py
+        echo >> test.py
+        echo "print(out)" >> test.py
+        echo >> test.py
+        python test.py
+        agentocr system --config ch --image_dir images
+
+  test-on-windows:
+
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install onnxruntime-directml
         python setup.py install
     - name: Download
       run: |
