--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install onnxruntime-directml
+        pip install onnxruntime
         python setup.py install
         choco install wget -y
     - name: Download
